<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_md">

        <!-- Date picker -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_md"
            android:hint="@string/measurement_date"
            app:startIconDrawable="@drawable/ic_calendar"
            app:endIconMode="none">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                android:textSize="@dimen/text_body" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Section: Body Composition -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Body Composition"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_subtitle"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/spacing_sm" />

        <!-- Weight and Height row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/spacing_md">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilWeight"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/spacing_sm"
                android:hint="@string/weight_kg">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/text_body" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilHeight"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/spacing_sm"
                android:hint="@string/height_cm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/text_body" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Body Fat -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBodyFat"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_lg"
            android:hint="@string/body_fat_percent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBodyFat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="@dimen/text_body" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Section: Circumferences -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Circumferences (cm)"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_subtitle"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/spacing_sm" />

        <!-- Chest & Waist -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/spacing_md">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilChest"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/spacing_sm"
                android:hint="@string/chest_cm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etChest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/text_body" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilWaist"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/spacing_sm"
                android:hint="@string/waist_cm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etWaist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/text_body" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Hips -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilHips"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_md"
            android:hint="@string/hips_cm">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etHips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="@dimen/text_body" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Left / Right Bicep -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/spacing_md">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLeftBicep"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/spacing_sm"
                android:hint="@string/left_bicep_cm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLeftBicep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/text_body" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRightBicep"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/spacing_sm"
                android:hint="@string/right_bicep_cm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRightBicep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/text_body" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Left / Right Thigh -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/spacing_md">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLeftThigh"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/spacing_sm"
                android:hint="@string/left_thigh_cm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLeftThigh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/text_body" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRightThigh"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/spacing_sm"
                android:hint="@string/right_thigh_cm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRightThigh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/text_body" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Left / Right Calf -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/spacing_md">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLeftCalf"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/spacing_sm"
                android:hint="@string/left_calf_cm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLeftCalf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/text_body" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRightCalf"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/spacing_sm"
                android:hint="@string/right_calf_cm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRightCalf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/text_body" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Notes -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNotes"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_lg"
            android:hint="@string/notes">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="2"
                android:textSize="@dimen/text_body" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Save -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="@dimen/text_subtitle"
            app:cornerRadius="8dp" />

    </LinearLayout>
</ScrollView>
